# GoDotIno

./: .gitignore  Makefile  README.md  cargo.toml
cli/: go.mod
cli/cmd/godotino/: main.go
cli/internal/check/: check.go
cli/internal/cli/: boards.go  build.go  check.go  config.go  init.go  pkg.go  root.go  upload.go
cli/internal/config/: config.go
cli/internal/core/: core.go
cli/internal/flash/: flash.go
cli/internal/manifest/: manifest.go
cli/internal/pkgmgr/: pkgmgr.go
cli/internal/ui/: ui.go
docs/: CLI.md  PACKAGE-MANAGER-V2.md  QUICKSTART.md  README.md  UI.md
examples/: blink.go  sensor.go  servo_sweep.go
ide/: README.md  next.config.js  package.json
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/src/: main.rs
ide/src/app/: globals.css  layout.tsx  page.tsx
ide/src/components/ide/: BottomPanel.tsx  CodeEditor.tsx  FilesSidebar.tsx  GitSidebar.tsx  IdeScreen.tsx  PackagesSidebar.tsx  SettingsScreen.tsx  WelcomeScreen.tsx
ide/src/components/ui/: primitives.tsx
ide/src/lib/: highlight.ts  store.ts  tauri.ts
pkg/: packages.json
pkg/dht/v1.0.0/: godotinolib.toml
pkg/keys/: index.json
pkg/u8g2/v1.0.0/: godotinolib.toml
pkg/ws2812/v1.0.0/: godotinolib.toml
src/: error.rs  lib.rs  main.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/runtime/: mod.rs  pkg_loader.rs  pkg_manager.rs
src/transpiler/: config.rs  mod.rs
